# GeneralAIAgent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  ruff.toml
config/: config.yaml
config/llm/: openai_4o-mini.yaml  openai_4o.yaml
config/tools/: default.yaml
src/: agent.py  hf_gaia_api.py  tools.py  utils.py
